# assemblyscript-protoc

./: Cargo.toml  README.md
src/: generator.rs  main.rs  plugin.rs  types.rs
tests/: integration.rs  kitchen-sink.proto
tests/kitchen-sink/: README.md  package-lock.json  package.json
tests/kitchen-sink/assembly/: index.ts
tests/kitchen-sink/assembly/__tests__/: api.spec.ts
tests/kitchen-sink/assembly/proto/: toto.pb.ts
